# vid10mb

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vid10mb/: cli.py
